--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.116.1",
-    "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
     "yfinance>=0.2.65",
 ]
