Docker compose completed! Now can deploy with docker compose

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,8 @@ RUN npm install .
 
 COPY . .
 
+ENV VITE_BACKEND_URI=http://localhost:5000
+
 RUN npm run build   # creates production-ready build in /app/build or /app/dist
 
 FROM nginx:alpine
