--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        VITE_BACKEND_URI: http://backend:5000
+        VITE_BACKEND_URI: http://localhost:5000
     
     ports:
       - "3000:80"
-
-    environment:
-      VITE_BACKEND_HOST: "backend"
-      VITE_BACKEND_PORT: 5000
 
     depends_on:
       - backend
