Added api auth for backend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,7 @@ RUN npm install .
 COPY . .
 
 ENV VITE_BACKEND_URI=http://localhost:5000
+ENV API_KEY=1Urje8ZSP9bZFelBgObPBFZgEgIdmoqNH3Aer9V76sqHqO5IS3ISdJxbahE6A48E
 
 RUN npm run build   # creates production-ready build in /app/build or /app/dist
 
