--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
+    "slowapi>=0.1.9",
     "yfinance>=0.2.65",
 ]
